--- a/src/index.scss
+++ b/src/index.scss
@@ -15,35 +15,86 @@ code {
   width: 100%;
   height: 200px;
 }
-// .list {
-//   background: #000;
-// }
-// .list:nth-child(odd) {
-//   .item {
-//     .imageClip {
-//       position: absolute;
-//       left: 0;
-//       top: 0;
-//       width: 100%;
-//       height: 100%;
-//       -webkit-clip-path: polygon(6% 8%, 5% 93%, 93% 95%, 90% 55%, 65% 54%, 65% 11%, 48% 8%, 45% 23%, 24% 23%, 24% 8%);
-//       clip-path: polygon(6% 8%, 5% 93%, 93% 95%, 90% 55%, 65% 54%, 65% 11%, 48% 8%, 45% 23%, 24% 23%, 24% 8%);
-//     }
-//     .borderclip {
-//       position: absolute;
-//       top: 0;
-//       left: 0;
-//       height: calc(100% + 15px);
-//       width: calc(100% + 5px);
-//       background-color: red;
-//       border: 5px solid red;
-//       -webkit-clip-path: polygon(6% 8%, 5% 93%, 93% 95%, 90% 55%, 65% 54%, 65% 11%, 48% 8%, 45% 23%, 24% 23%, 24% 8%);
-//       clip-path: polygon(6% 8%, 5% 93%, 93% 95%, 90% 55%, 65% 54%, 65% 11%, 48% 8%, 45% 23%, 24% 23%, 24% 8%);
-//     }
-//   }
-// }
-
-.list .item:nth-child(even) {
+.list .item:nth-child(5n + 1) {
+  .imageClip {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-clip-path: polygon(
+      5% 15%,
+      5% 30%,
+      15% 30%,
+      15% 70%,
+      5% 70%,
+      5% 95%,
+      5% 95%,
+      95% 95%,
+      95% 25%,
+      80% 25%,
+      80% 5%,
+      60% 5%,
+      60% 15%
+    );
+    clip-path: polygon(
+      5% 15%,
+      5% 30%,
+      15% 30%,
+      15% 70%,
+      5% 70%,
+      5% 95%,
+      5% 95%,
+      95% 95%,
+      95% 25%,
+      80% 25%,
+      80% 5%,
+      60% 5%,
+      60% 15%
+    );
+  }
+  .borderclip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: calc(100% + 15px);
+    width: calc(100% + 5px);
+    background-color: #1f3048;
+    border: 5px solid #1f3048;
+    -webkit-clip-path: polygon(
+      5.5% 15%,
+      5.5% 32.5%,
+      15% 32.5%,
+      15% 67.8%,
+      5.5% 67.8%,
+      5.5% 90%,
+      5.5% 94.5%,
+      94.5% 94.5%,
+      94.5% 24.5%,
+      80.2% 24.5%,
+      80.2% 5.5%,
+      58.5% 5.5%,
+      58.5% 15%
+    );
+    clip-path: polygon(
+      5.5% 15%,
+      5.5% 32.5%,
+      15% 32.5%,
+      15% 67.8%,
+      5.5% 67.8%,
+      5.5% 90%,
+      5.5% 94.5%,
+      94.5% 94.5%,
+      94.5% 24.5%,
+      80.2% 24.5%,
+      80.2% 5.5%,
+      58.5% 5.5%,
+      58.5% 15%
+    );
+  }
+}
+.list .item:nth-child(4n + 1) {
+  // .list .item:nth-child(even) {
   .borderclip {
     position: absolute;
     top: 0;
@@ -66,7 +117,7 @@ code {
     clip-path: polygon(5% 5%, 5% 95%, 95% 95%, 95% 57%, 64% 57%, 64% 5%, 46% 5%, 46% 26%, 23.2% 26%, 23.2% 5%);
   }
 }
-.list .item:nth-child(odd) {
+.list .item:nth-child(3n + 2) {
   .borderclip {
     position: absolute;
     top: 0;
@@ -87,5 +138,28 @@ code {
     height: 100%;
     -webkit-clip-path: polygon(5% 5%, 25% 5%, 25% 40%, 95% 40%, 95% 95%, 5% 95%);
     clip-path: polygon(5% 5%, 25% 5%, 25% 40%, 95% 40%, 95% 95%, 5% 95%);
+  }
+}
+.list .item:nth-child(2n + 3) {
+  .borderclip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: calc(100% + 15px);
+    width: calc(100% + 5px);
+    background-color: #1f3048;
+    border: 5px solid #1f3048;
+    -webkit-clip-path: polygon(5% 24%, 5% 95%, 95% 95%, 95% 5%, 24.5% 5%, 24.5% 24%);
+    clip-path: polygon(5% 24%, 5% 95%, 95% 95%, 95% 5%, 24.5% 5%, 24.5% 24%);
+  }
+
+  .imageClip {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-clip-path: polygon(5% 25%, 5% 95%, 95% 95%, 95% 5%, 25% 5%, 25% 25%);
+    clip-path: polygon(5% 25%, 5% 95%, 95% 95%, 95% 5%, 25% 5%, 25% 25%);
   }
 }
